--- a/javascript/js-lesson-2/index.html
+++ b/javascript/js-lesson-2/index.html
@@ -12,7 +12,7 @@
   <body>
     <h1>js-lesson-2</h1>
 
-    <script src="homework.js"></script>
+    <!-- <script src="homework.js"></script> -->
     <script src="classwork.js"></script>
     <script src="additional.js"></script>
 
