--- a/javascript/js-lesson-4/classwork/classwork4.html
+++ b/javascript/js-lesson-4/classwork/classwork4.html
@@ -5,15 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>js-lesson-1</title>
+    <link rel="stylesheet" href="classwork4.css">
+    <title>js-4-classwork</title>
   </head>
 
   <body>
-    <h1>js-lesson-3-homework</h1>
+    <div>
+      <h1>js-4-classwork</h1>
+    </div>
 
 
-    <script src="homework.js"></script>
+    <script src="classwork4.js"></script>
   </body>
 
 </html>
